2007-03-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars):  For candlesticks whose width is equal
	to a small even number of pixels, the central vertical bar is displaced
	to one side or the other. This patch forces the width to be an odd
	number of pixels so that the box is symmetric.

2007-03-03  Ethan Merritt  <merritt@u.washington.edu>

	* docs/titlepag.tex: Update author list and copyright information.

	* NEWS: Update

	* demo/pm3d.dem: Add "test palette" to the demo series.

2007-02-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_image): libgd is sensitive to the order of the bounds
	used for clipping. Swap bounding box corners if necessary.
	Bugfix.

2007-02-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c: The code to allow room for subscripts/superscripts
	when placing the x-axis label was masked by a spurious #ifdef.
	Bug #1669038

	* src/datafile.c: Avoid double-close of data_fp in pathological cases.

2007-02-26  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add mention of "set multiplot title <page-title>".

	* src/term_api.h term/aquaterm.c term/gd.trm term/pdf.trm:  Remove cruft
	(enhanced_max_height, enhanced_min_height) used only be PostScript but
	exported to everyone.
	
	* term/estimate.trm: Keep track of string height in local variables
	instead, and return the net height in term->ymax.  It was supposedly
	doing this already.  Now it really does.

2007-02-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_color_smooth_box) src/plot3d.c (eval_3dplots):
	Call setup_tics(COLOR_AXIS, 20) at the same place as setup_tics(...)
	for all other axes. Until now it was called much later during color box
	drawing where it could change the colour axis min or max by rounding it
	to lower/upper tics step.

2007-02-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c (df_reset_after_error)