@@ -3,7 +3,8 @@
 	* src/graphics.c (plot_c_bars):  For candlesticks whose width is equal
 	to a small even number of pixels, the central vertical bar is displaced
 	to one side or the other. This patch forces the width to be an odd
-	number of pixels so that the box is symmetric.
+	number of pixels so that the box is symmetric.  Also, honor the border
+	linetype of the current fillstyle.
 
 2007-03-03  Ethan Merritt  <merritt@u.washington.edu>
 
